Fix z-index for .background element and .description text for larger screens

--- a/styles.css
+++ b/styles.css
@@ -169,6 +169,8 @@ a > img {
     .description {
         grid-row: 1 / 2;
         grid-column: 1 / 3;
+        background-image: url(resources/svg/Background_decor.svg);
+        background-repeat: no-repeat;
     }    
     .one {
         grid-column: 1 / 2;
@@ -268,9 +270,10 @@ a > img {
         grid-column: 1 / 2;
         background-image: url(resources/svg/Background_decor.svg);
         background-repeat: no-repeat;
+        z-index: 1;
     }
     .description > * {
         position: relative;
-        z-index: 1;
+        z-index: 2;
     }
 }
